tests/pass/no_return_fun.py
def foo():
    a = 2
    b = 2


# Function with no return should return None
assert foo() == None
