tests/fail/type_not_define_fun_param.py
def foo(a: Point) -> Point:
    return a
